--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>THREE</title>
     <script type="module" src="index.ts" defer></script>
   </head>
-  <body></body>
+  <body>
+    <canvas></canvas>
+  </body>
   <style>
     html,
     body {
