--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>THREE</title>
+    <title>WebGPU</title>
     <script type="module" src="index.ts" defer></script>
   </head>
   <body>
